2019-05-31  Kocsen Chung  <kocsen_chung@apple.com>

        Revert r245946. rdar://problem/47390407

2019-05-30  Ryosuke Niwa  <rniwa@webkit.org>

        iOS: Main frame should be scrollable when pinch zoomed or software keyboard is up
        https://bugs.webkit.org/show_bug.cgi?id=198244

        Reviewed by Simon Fraser.

        Added regression tests.

        * fast/scrolling/ios/body-overflow-hidden-height-100-percent-keyboard-expected.txt: Added.
        * fast/scrolling/ios/body-overflow-hidden-height-100-percent-keyboard.html: Added.
        * fast/scrolling/ios/body-overflow-hidden-height-100-percent-zoomed-1-expected.txt: Added.
        * fast/scrolling/ios/body-overflow-hidden-height-100-percent-zoomed-1.html: Added.
        * fast/scrolling/ios/body-overflow-hidden-height-100-percent-zoomed-2-expected.txt: Added.
        * fast/scrolling/ios/body-overflow-hidden-height-100-percent-zoomed-2.html: Added.

2019-05-30  Jer Noble  <jer.noble@apple.com>

        Video playback in Safari should continue when CarPlay is plugged in
        https://bugs.webkit.org/show_bug.cgi?id=198345
        <rdar://problem/45505750>

        Reviewed by Eric Carlson.

        * media/video-isplayingtoautomotiveheadunit-expected.txt: Added.
        * media/video-isplayingtoautomotiveheadunit.html: Added.

2019-05-30  Youenn Fablet  <youenn@apple.com>

        Add an option to mute audio capture automatically when page is not visible
        https://bugs.webkit.org/show_bug.cgi?id=198307

        Reviewed by Eric Carlson.

        * platform/ios/mediastream/audio-muted-in-background-tab-expected.txt: Added.
        * platform/ios/mediastream/audio-muted-in-background-tab.html: Added.

2019-05-30  Saam Barati  <sbarati@apple.com>

        [WHLSL] Enforce variable lifetimes
        https://bugs.webkit.org/show_bug.cgi?id=195794
        <rdar://problem/50746293>

        Reviewed by Myles C. Maxfield.
