@@ -1,5 +1,9 @@
 2019-05-31  Kocsen Chung  <kocsen_chung@apple.com>
 
+        Revert r245953. rdar://problem/51314019
+
+2019-05-31  Kocsen Chung  <kocsen_chung@apple.com>
+
         Revert r245946. rdar://problem/47390407
 
 2019-05-30  Ryosuke Niwa  <rniwa@webkit.org>
